Fix stretched images: height auto so width/height attrs only reserve space

--- a/src/style.css
+++ b/src/style.css
@@ -45,6 +45,7 @@ a {
 
 img {
   max-width: 100%;
+  height: auto;
 }
 
 kbd {
